<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.agdturner</groupId>
    <artifactId>rc-mol</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    
    <name>rc-mol</name>
    <url>https://github.com/agdturner/rc-mol</url>
    <description>A modular Java application for loading, aligning and visualising ribosome data.</description>
    <scm>
        <url>git@github.com:agdturner/rc-mol.git</url>
        <connection>scm:git:git@github.com:agdturner/rc-mol.git</connection>
        <developerConnection>scm:git:git@github.com:agdturner/rc-mol</developerConnection>
        <tag>rc-mol-0.1</tag>
    </scm>
    <licenses>
        <license>
            <name>APACHE LICENSE, VERSION 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>
    <organization>
        <name>University of Leeds</name>
        <url>http://www.leeds.ac.uk/</url>
    </organization>
    <developers>
        <developer>
            <id>agdturner</id>
            <name>Andy Turner</name>
            <email>a.g.d.turner@leeds.ac.uk</email>
            <organization>University of Leeds</organization>
            <organizationUrl>http://www.leeds.ac.uk/</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
        <maven.compiler.release>${maven.compiler.target}</maven.compiler.release>
        <maven.compiler.testSource>${maven.compiler.source}</maven.compiler.testSource>
        <maven.compiler.testTarget>${maven.compiler.testSource}</maven.compiler.testTarget>
        <maven.compiler.testRelease>${maven.compiler.testTarget}</maven.compiler.testRelease>
    </properties>
    
    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.rcsb/ciftools-java -->
        <dependency>
            <groupId>org.rcsb</groupId>
            <artifactId>ciftools-java</artifactId>
            <version>7.0.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.github.agdturner/ccg-generic -->
        <dependency>
            <groupId>io.github.agdturner</groupId>
            <artifactId>ccg-generic</artifactId>
            <version>2.3-SNAPSHOT</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.github.agdturner/ccg-io -->
        <dependency>
            <groupId>io.github.agdturner</groupId>
            <artifactId>ccg-io</artifactId>
            <version>1.1.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.github.agdturner/ccg-data -->
        <dependency>
            <groupId>io.github.agdturner</groupId>
            <artifactId>ccg-data</artifactId>
            <version>0.3.2-SNAPSHOT</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.github.agdturner/ccg-math -->
        <dependency>
            <groupId>io.github.agdturner</groupId>
            <artifactId>ccg-math</artifactId>
            <version>3.1.0-SNAPSHOT</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.github.agdturner/ccg-r3d -->
        <dependency>
            <groupId>io.github.agdturner</groupId>
            <artifactId>ccg-r3d</artifactId>
            <version>0.2-SNAPSHOT</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.github.agdturner/ccg-v3d -->
        <dependency>
            <groupId>io.github.agdturner</groupId>
            <artifactId>ccg-v3d</artifactId>
            <version>0.20-SNAPSHOT</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/ch.obermuhlner/big-math -->
        <dependency>
            <groupId>ch.obermuhlner</groupId>
            <artifactId>big-math</artifactId>
            <version>2.3.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>-verbose</arg>
                        <arg>-Xlint:all,-options,-path</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <argLine>-Xms256m</argLine>
                    <!-- Ignore test failures -->
                    <!--
                    <includes>
                        <include>TestFail.java</include>
                    </includes>
                    <testFailureIgnore>false</testFailureIgnore>
                    <reuseForks>false</reuseForks>
                    <forkCount>1</forkCount>
                    -->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
            <!-- Skip 
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.0.0-M6</version>
                <configuration>
                    <arguments>-Dmaven.javadoc.skip=true</arguments>
                </configuration>
            </plugin>Skip creating javadocs -->
        </plugins>
    </build>
            
    <profiles>
        <profile> 
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.13</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>          
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.11.0</version>
                        <configuration>
                            <compilerArgs>
                                <arg>-verbose</arg>
                                <arg>-Xlint:all,-options,-path</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.2.2</version>
                        <configuration>
                            <argLine>-Xms256m -Xmx512m</argLine>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>3.1.2</version>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- Comment out to skip creating javadocs -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.5.0</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <!--
        <repository>
            <id>internal</id>
            <url>file://${project.build.directory}/mvn-repo</url>
        </repository>
        -->
        <repository>
            <id>github</id>
            <name>GitHub agdturner Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/agdturner/ccg-v2d</url>
        </repository>
        <!--
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        -->
        
    </distributionManagement>
</project>
